# dealscout

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  watch.yml
data/: dealscout.db
dealscout/: cli.py  config.py  fx.py  intake.py  judge.py  models.py  notify.py  runner.py  schedule.py  store.py  verdict.py
dealscout/sources/: base.py  itad.py
docs/superpowers/plans/: 2026-07-02-dealscout-m1.md  2026-07-20-dealscout-m1.5.md  2026-07-22-dealscout-m2a.md  2026-07-23-dealscout-m2b.md
docs/superpowers/specs/: 2026-07-02-dealscout-design.md  2026-07-20-dealscout-m1.5-design.md  2026-07-22-dealscout-m2a-design.md  2026-07-23-dealscout-m2b-design.md
tests/: test_cli.py  test_config.py  test_fx.py  test_intake.py  test_itad.py  test_judge.py  test_models.py  test_notify.py  test_runner.py  test_schedule.py  test_smoke.py  test_store.py  test_verdict.py
