[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dealscout"
version = "0.1.0"
description = "Personal price-watching agent: watches game and e-commerce prices, judges real discounts, notifies via Telegram"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
    "google-genai>=2.13,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
dealscout = "dealscout.cli:app"

[tool.setuptools.packages.find]
include = ["dealscout*"]

[tool.ruff]
line-length = 100
target-version = "py311"
